# tetris_core_mod

./: Cargo.toml
src/: active_figure.rs  game.rs  lib.rs
src/figure/: figure_type.rs  graphics.rs
src/figure/utilities/: geometry.rs  graphics.rs
